# movie_collector

./: .env  .env.example  .gitignore  Makefile  README.md  gitignore  pyproject.toml
.github/workflows/: build.yml  ci.yml  terraform-plan.yml
.ingestion_checkpoints/: backfill.json
docs/: implementation-plan.md  working-method.md
docs/adr/: 0001-separacion-bronze-silver.md  0002-refresh-cookie-secure-flag-por-entorno.md  0003-paginacion-offset-en-vez-de-cursor.md
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css
frontend/src/components/: MovieCard.tsx  NavBar.tsx  Pagination.tsx
frontend/src/lib/: api.ts  auth-context.tsx  catalog.ts  tmdb-image.ts  types.ts
frontend/src/pages/: Home.tsx  Login.tsx  MovieDetail.tsx  Rankings.tsx  Register.tsx  Search.tsx  VerifyEmail.tsx
infra/compose/: docker-compose.dev.yml  docker-compose.test.yml
infra/observability/: prometheus.yml  tempo.yml
infra/observability/grafana/dashboards/: ml_platform_health.json
infra/observability/grafana/provisioning/dashboards/: dashboards.yml
infra/observability/grafana/provisioning/datasources/: datasources.yml
infra/terraform/: main.tf
ingestion/: Dockerfile  pyproject.toml
ingestion/src/ingestion/: backfill.py  cli.py  config.py  movielens_seed.py  tmdb_client.py  transform.py
modules/distributed_training/: pyproject.toml
modules/fraud_detection/: pyproject.toml
modules/rag_assistant/: pyproject.toml
modules/recommender/: pyproject.toml
platform/: Dockerfile  pyproject.toml
platform/migrations/: env.py
platform/migrations/versions/: 016efc22bda5_esquema_inicial_bronze_silver_fase_0_1.py  81ea96db5f0d_movies_anadir_poster_path_y_backdrop_.py  9ad321090641_fase_1_registry_de_modelos_y_feature_.py  9ec12fa70bcc_activar_extension_pg_trgm_para_busqueda_.py  d50a75a06fdd_indices_gin_para_busqueda_full_text_y_.py
platform/src/platform_core/: app.py  config.py  db.py  errors.py
platform/src/platform_core/email/: mailer.py
platform/src/platform_core/models/: __init__.py  bronze.py  catalog.py  interactions.py  ml_platform.py  moderation.py  users.py
platform/src/platform_core/monitoring/: metrics.py  tracing.py
platform/src/platform_core/routers/: account.py  auth.py  catalog.py  health.py  interactions.py  ml.py  moderation.py
platform/src/platform_core/schemas/: account.py  auth.py  catalog.py  interactions.py  ml.py  moderation.py
platform/src/platform_core/scripts/: seed_admin.py
platform/src/platform_core/security/: audit.py  dependencies.py  passwords.py  rate_limit.py  tokens.py
platform/src/platform_core/services/: account_service.py  auth_service.py  catalog_service.py  feature_store_service.py  interactions_service.py  moderation_service.py  registry_service.py  serving_service.py
platform/tests/: test_errors.py  test_passwords.py  test_serving_dummy.py  test_tokens.py
tests/integration/: conftest.py  test_auth_flow.py  test_catalog_and_interactions.py  test_ml_platform.py  test_moderation.py
