[project]
name = "cine-ml-platform"
version = "0.1.0"
description = "Backbone de plataforma ML para plataforma de cine/streaming (proyecto de practica de arquitectura ML end-to-end)"
requires-python = ">=3.12,<3.13"
readme = "README.md"

[tool.uv.workspace]
members = ["platform", "modules/*", "ingestion"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["platform/migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP042"]  # Depends() en defaults = patron FastAPI; (str, Enum) es deliberado

[tool.pytest.ini_options]
testpaths = ["tests", "platform", "modules", "ingestion"]
python_files = ["test_*.py"]
markers = [
    "integration: requiere testcontainers (Postgres real), no llamadas a APIs externas reales",
    "e2e: flujo completo cruzando modulos reales",
]

[dependency-groups]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
]