[project]
name = "ingestion"
version = "0.1.0"
description = "Conectores TMDB/OMDb/MovieLens, backfill bronze, transformacion bronze->silver, seed sintetico"
requires-python = ">=3.12,<3.13"
dependencies = [
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
    "sqlalchemy>=2.0.35",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pandas>=2.2.3",
    "structlog>=24.4.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.2",
    "click>=8.1.7",
    "platform-core",
]

[tool.uv.sources]
platform-core = { workspace = true }

[dependency-groups]
dev = [
    "vcrpy>=6.0.1",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]
