[project]
name = "fraud_detection"
version = "0.1.0"
description = "Modulo fraud_detection - placeholder, se implementa en su fase correspondiente (ver implementation-plan.md)"
requires-python = ">=3.12,<3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection"]
